Bug 50079 - [G45]GLSL Demo skinnning lost image
Summary: [G45]GLSL Demo skinnning lost image
Status: VERIFIED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: 8.0
Hardware: All Linux (All)
: high major
Assignee: Eric Anholt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-17 21:57 UTC by lu hua
Modified: 2012-08-13 08:31 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
skinnning (136.56 KB, image/jpeg)
2012-05-17 21:57 UTC, lu hua
Details

Description lu hua 2012-05-17 21:57:57 UTC
Created attachment 61782 [details]
skinnning

System Environment:       
--------------------------
Arch:           x86_64
Platform:       G45
Libdrm:         (master)2.4.33-20-gd72a44c7c4f5eea9c1e5bb0c36cb9e0224b9ca22
Mesa:           (8.0)fa68a8bae3961808288cfd84d5a7843f6fc0f317
Xserver:        (server-1.12-branch)xorg-server-1.12.1
Xf86_video_intel:       
(master)2.19.0-36-ga3d37fb29f8dffb0e370ad95783994aaa7eccfaf
Cairo:        (master)dbc0efad7e565558a3abf7f69d7675efddc4688d
Libva:        (master)aa8d1caa96eb2f83f4e24d7a7f400a675f6611d0
Libva_intel_driver: (master)d0dfefde77ebe6093e304a84df796c6e1157f00a
Kernel:        (drm-intel-fixes) 2e7a44814d802c8ba479164b8924070cd908d6b5

Bug detailed description:
------------------------- 
Run ./skinnning ,The skinning window pops up,but no image in the window, Such as the attachment.

GLSL_Demo: 'array' and 'vert-tex' also have this issue.
Comment 1 Eric Anholt 2012-08-06 23:59:26 UTC
Patch series at:

http://lists.freedesktop.org/archives/mesa-dev/2012-July/024860.html
Comment 2 Eric Anholt 2012-08-09 16:09:08 UTC
commit e119f98472f6ceb03ffd564eb0398233e7b81437
Author: Eric Anholt <eric@anholt.net>
Date:   Fri Jul 27 12:57:56 2012 -0700

    i965/vs: Add support for copying user edge flags.
Comment 3 lu hua 2012-08-13 05:27:06 UTC
Verified. Fixed on Mesa master 9f5ff5981cfc1b1eb613890e4f8cec6a448611cc
Comment 4 lu hua 2012-08-13 08:31:24 UTC
Verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.